--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2 class="logo">BALI</h2>
       <div class="toggle"></div>
     </header>
-    <video src="./bali" muted loop autoplay></video>
+    <video src="./bali.mp4" muted loop autoplay></video>
     <div class="overlay"></div>
     <div class="text">
       <h2>Never Stop To </h2> 
